[package]
name = "rast-graphics"
version = "0.2.0"
edition = "2024"
authors = ["nyoravim"]
description = "Parallelized software rasterizer"
readme = "README.md"
repository = "https://github.com/nyoravim/rast-rs"
license-file = "LICENSE"

[lib]
name = "rast"

[dependencies]
nalgebra = { version = "0.34.1", features = ["rayon"] }
rayon = "1.11.0"

[dev-dependencies]
bmp = "0.5.0"
rand = "0.9.2"
softbuffer = "0.4.6"
winit = "0.30.12"
